--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
           # zenduty_escalation_policy_id: ${{ secrets.ZENDUTY_ESCALATION_POLICY_ID }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SIEMBOT_JIRA_USER: ${{ secrets.SIEMBOT_JIRA_USER }}
+          SIEMBOT_JIRA_PASS: ${{ secrets.SIEMBOT_JIRA_PASS }}
       - name: Install dependencies
         run: npm install
       - name: Build
