--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@actions/github": "5.0.1",
     "@pagerduty/pdjs": "2.2.4",
     "@slack/webhook": "6.1.0",
+    "@types/jira-client": "^7.1.4",
     "adaptivecards": "2.10.0",
+    "jira-client": "^8.1.0",
     "node-fetch": "2.6.7"
   },
   "devDependencies": {
