--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,10 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          # microsoft_teams_webhook: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK }}
-          # slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
-          # pager_duty_integration_key: ${{ secrets.PAGER_DUTY_INTEGRATION_KEY }}
-          # zenduty_api_key: ${{ secrets.ZENDUTY_API_KEY }}
-          # zenduty_service_id: ${{ secrets.ZENDUTY_SERVICE_ID }}
-          # zenduty_escalation_policy_id: ${{ secrets.ZENDUTY_ESCALATION_POLICY_ID }}
+          siembot_jira_user: ${{ secrets.SIEMBOT_JIRA_USER }}
+          siembot_jira_pass: ${{ secrets.SIEMBOT_JIRA_PASS }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SIEMBOT_JIRA_USER: ${{ secrets.SIEMBOT_JIRA_USER }}
-          SIEMBOT_JIRA_PASS: ${{ secrets.SIEMBOT_JIRA_PASS }}
       - name: Install dependencies
         run: npm install
       - name: Build
